--- a/src/AWS_website/public/main.html
+++ b/src/AWS_website/public/main.html
@@ -1,168 +1,189 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="icon"
-      href="../assets/img/main_logo_favicon.png"
-      type="image/x-icon"
-    />
-    <link rel="stylesheet" href="/src/AWS_website/style/style.css" />
-    <title>Come creare un sever AWS</title>
-  </head>
-  <body>
-    <header class="bg-navyBlue flex w-full border-b-2 border-black px-10 py-3 sticky top-0">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="../assets/img/main_logo_favicon.png" type="image/x-icon" />
+  <link rel="stylesheet" href="/src/AWS_website/style/style.css" />
+  <title>Come creare un sever AWS</title>
+</head>
+
+<body class="w-screen">
+  <header class="sticky top-0 flex w-full bg-navyBlue px-10 py-3">
+    <div>
+      <svg viewBox="0 0 16 16" data-view-component="true" stroke="white" stroke-width="0.7" stroke-linecap="round"
+        stroke-linejoin="round"
+        class="octicon octicon-mark-github v-align-middle color-fg-default h-8 w-8 cursor-pointer overflow-visible fill-white">
+        <path
+          d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z">
+        </path>
+      </svg>
+    </div>
+    <div class="ml-auto flex space-x-10">
       <div>
-        <svg
-          viewBox="0 0 16 16"
-          data-view-component="true"
-          stroke="white"
-          stroke-width="0.7"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          class="octicon octicon-mark-github v-align-middle color-fg-default h-8 w-8 cursor-pointer overflow-visible"
-        >
-          <path
-            d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z"
-          ></path>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="white" stroke-width="2"
+          stroke-linecap="round" stroke-linejoin="round" class="feather feather-sun h-8 w-8 cursor-pointer fill-none">
+          <circle cx="12" cy="12" r="5"></circle>
+          <line x1="12" y1="1" x2="12" y2="3"></line>
+          <line x1="12" y1="21" x2="12" y2="23"></line>
+          <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
+          <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
+          <line x1="1" y1="12" x2="3" y2="12"></line>
+          <line x1="21" y1="12" x2="23" y2="12"></line>
+          <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
+          <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
         </svg>
       </div>
-      <div class="ml-auto flex space-x-10">
-        <div>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            stroke="white"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="feather feather-sun h-8 w-8 cursor-pointer fill-none"
-          >
-            <circle cx="12" cy="12" r="5"></circle>
-            <line x1="12" y1="1" x2="12" y2="3"></line>
-            <line x1="12" y1="21" x2="12" y2="23"></line>
-            <line x1="4.22" y1="4.22" x2="5.64" y2="5.64"></line>
-            <line x1="18.36" y1="18.36" x2="19.78" y2="19.78"></line>
-            <line x1="1" y1="12" x2="3" y2="12"></line>
-            <line x1="21" y1="12" x2="23" y2="12"></line>
-            <line x1="4.22" y1="19.78" x2="5.64" y2="18.36"></line>
-            <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
-          </svg>
-        </div>
-        <div>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            stroke="white"
-            stroke-width="2"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="feather feather-user h-8 w-8 fill-none"
-          >
-            <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
-            <circle cx="12" cy="7" r="4"></circle>
-          </svg>
-        </div>
-      </div>
-    </header>
-    <div class="w-7xl mx-auto mt-10">
       <div>
-        <a
-          href="#"
-          class="mb-2 inline-flex items-center rounded-md bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800 dark:bg-gray-700 dark:text-blue-400"
-        >
-          <svg
-            class="me-1.5 h-2.5 w-2.5"
-            aria-hidden="true"
-            xmlns="http://www.w3.org/2000/svg"
-            fill="currentColor"
-            viewBox="0 0 20 14"
-          >
-            <path
-              d="M11 0H2a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h9a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2Zm8.585 1.189a.994.994 0 0 0-.9-.138l-2.965.983a1 1 0 0 0-.685.949v8a1 1 0 0 0 .675.946l2.965 1.02a1.013 1.013 0 0 0 1.032-.242A1 1 0 0 0 20 12V2a1 1 0 0 0-.415-.811Z"
-            />
-          </svg>
-          Tutorial
-        </a>
-        <h1
-          class="mb-4 text-3xl font-extrabold text-gray-900 md:text-5xl lg:text-6xl dark:text-white"
-        >
-          Guida ad
-          <span
-            class="to-orange bg-gradient-to-r from-orange-300 bg-clip-text text-transparent"
-            >AWS:</span
-          >
-          <small class="ms-2 font-semibold text-gray-500 dark:text-gray-400"
-            >Hosting di un sito web</small
-          >
-        </h1>
-
-        <p class="mb-4 text-lg font-normal text-gray-500 dark:text-gray-400">
-          Nella nostra guida, esamineremo il processo completo di creazione e
-          configurazione di un server virtuale utilizzando AWS per ospitare un
-          sito web. <br />
-          Offriremo istruzioni dettagliate per completare con successo
-          l'implementazione del sito su AWS, seguendo le migliori pratiche per
-          un hosting sicuro e affidabile.
-        </p>
-
-        <div class="flex items-center gap-4">
-          <img
-            class="h-10 w-10 rounded-full"
-            src="../assets/img/ciollo_pgp.jpeg"
-            alt=""
-          />
-          <div class="font-medium dark:text-white">
-            <a href="https://github.com/Ciollo" target="_blank">
-              <button
-                type="button"
-                class="mb-1 me-2 inline-flex items-center rounded-lg bg-[#24292F] px-3 py-1.5 text-center text-sm font-medium text-white hover:bg-[#24292F]/90 focus:outline-none dark:hover:bg-[#050708]/30 dark:focus:ring-gray-500"
-              >
-                <svg
-                  class="me-2 h-5 w-5"
-                  aria-hidden="true"
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="currentColor"
-                  viewBox="0 0 20 20"
-                >
-                  <path
-                    fill-rule="evenodd"
-                    d="M10 .333A9.911 9.911 0 0 0 6.866 19.65c.5.092.678-.215.678-.477 0-.237-.01-1.017-.014-1.845-2.757.6-3.338-1.169-3.338-1.169a2.627 2.627 0 0 0-1.1-1.451c-.9-.615.07-.6.07-.6a2.084 2.084 0 0 1 1.518 1.021 2.11 2.11 0 0 0 2.884.823c.044-.503.268-.973.63-1.325-2.2-.25-4.516-1.1-4.516-4.9A3.832 3.832 0 0 1 4.7 7.068a3.56 3.56 0 0 1 .095-2.623s.832-.266 2.726 1.016a9.409 9.409 0 0 1 4.962 0c1.89-1.282 2.717-1.016 2.717-1.016.366.83.402 1.768.1 2.623a3.827 3.827 0 0 1 1.02 2.659c0 3.807-2.319 4.644-4.525 4.889a2.366 2.366 0 0 1 .673 1.834c0 1.326-.012 2.394-.012 2.72 0 .263.18.572.681.475A9.911 9.911 0 0 0 10 .333Z"
-                    clip-rule="evenodd"
-                  />
-                </svg>
-                Ciollo
-              </button>
-            </a>
-            <div class="text-sm text-gray-500 dark:text-gray-400">
-              Maggio 2024
-            </div>
-          </div>
-        </div>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="white" stroke-width="2"
+          stroke-linecap="round" stroke-linejoin="round" class="feather feather-user h-8 w-8 fill-none">
+          <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+          <circle cx="12" cy="7" r="4"></circle>
+        </svg>
       </div>
-      <div class="mt-10">
-        <div>
-          <img
-            class="h-96 w-full rounded-lg object-cover shadow-xl dark:shadow-gray-800"
-            src="../assets/img/aws_logo_smile_1200x630.png"
-            alt="image description"
-          />
-        </div>
-        <div>
-          <div>
-            <h2
-              class="mt-10 mb-4 text-2xl font-extrabold text-gray-900 dark:text-white"
-            >
-              Prerequisiti
-            </h2>
-            <p class="mb-4 text-lg font-normal text-gray-500 dark:text-gray-400">
-              Prima di iniziare, è necessario disporre di un account AWS. Se non
-              ne hai già uno, puoi crearne uno gratuitamente sul sito web di <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Amazon Web Service</a>
-            </p>
+    </div>
+  </header>
+  <div class="mx-auto mt-10 w-8xl max-w-full">
+    <div class="w-full">
+      <a href="#"
+        class="mb-2 inline-flex items-center rounded-md bg-blue-100 px-2.5 py-0.5 text-xs font-medium text-blue-800 dark:bg-gray-700 dark:text-blue-400">
+        <svg class="me-1.5 h-2.5 w-2.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+          viewBox="0 0 20 14">
+          <path
+            d="M11 0H2a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h9a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2Zm8.585 1.189a.994.994 0 0 0-.9-.138l-2.965.983a1 1 0 0 0-.685.949v8a1 1 0 0 0 .675.946l2.965 1.02a1.013 1.013 0 0 0 1.032-.242A1 1 0 0 0 20 12V2a1 1 0 0 0-.415-.811Z" />
+        </svg>
+        Tutorial
+      </a>
+      <h1 class="mb-4 text-3xl font-extrabold text-gray-900 md:text-5xl lg:text-6xl dark:text-white">
+        Guida ad
+        <span class="bg-gradient-to-r from-orange-300 to-orange bg-clip-text text-transparent">AWS:</span>
+        <small class="ms-2 font-semibold text-gray-500 dark:text-gray-400">Hosting di un sito web</small>
+      </h1>
+
+      <p class="mb-4 text-lg font-normal text-gray-500 dark:text-gray-400">
+        Nella nostra guida, esamineremo il processo completo di creazione e
+        configurazione di un server virtuale utilizzando AWS per ospitare un
+        sito web. <br />
+        Offriremo istruzioni dettagliate per completare con successo
+        l'implementazione del sito su AWS, seguendo le migliori pratiche per
+        un hosting sicuro e affidabile.
+      </p>
+
+      <div class="flex items-center gap-4">
+        <img class="h-10 w-10 rounded-full" src="../assets/img/ciollo_pgp.jpeg" alt="" />
+        <div class="font-medium dark:text-white">
+          <a href="https://github.com/Ciollo" target="_blank">
+            <button type="button"
+              class="mb-1 me-2 inline-flex items-center rounded-lg bg-[#24292F] px-3 py-1.5 text-center text-sm font-medium text-white hover:bg-[#24292F]/90 focus:outline-none dark:hover:bg-[#050708]/30 dark:focus:ring-gray-500">
+              <svg class="me-2 h-5 w-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                viewBox="0 0 20 20">
+                <path fill-rule="evenodd"
+                  d="M10 .333A9.911 9.911 0 0 0 6.866 19.65c.5.092.678-.215.678-.477 0-.237-.01-1.017-.014-1.845-2.757.6-3.338-1.169-3.338-1.169a2.627 2.627 0 0 0-1.1-1.451c-.9-.615.07-.6.07-.6a2.084 2.084 0 0 1 1.518 1.021 2.11 2.11 0 0 0 2.884.823c.044-.503.268-.973.63-1.325-2.2-.25-4.516-1.1-4.516-4.9A3.832 3.832 0 0 1 4.7 7.068a3.56 3.56 0 0 1 .095-2.623s.832-.266 2.726 1.016a9.409 9.409 0 0 1 4.962 0c1.89-1.282 2.717-1.016 2.717-1.016.366.83.402 1.768.1 2.623a3.827 3.827 0 0 1 1.02 2.659c0 3.807-2.319 4.644-4.525 4.889a2.366 2.366 0 0 1 .673 1.834c0 1.326-.012 2.394-.012 2.72 0 .263.18.572.681.475A9.911 9.911 0 0 0 10 .333Z"
+                  clip-rule="evenodd" />
+              </svg>
+              Ciollo
+            </button>
+          </a>
+          <div class="text-sm text-gray-500 dark:text-gray-400">
+            Maggio 2024
           </div>
         </div>
       </div>
     </div>
-  </body>
+    <div class="mt-10 w-full">
+      <div>
+        <img class="h-96 w-full rounded-lg object-cover shadow-xl dark:shadow-gray-800"
+          src="../assets/img/aws_logo_smile_1200x630.png" alt="image description" />
+      </div>
+      <div>
+        <div>
+          <h2 class="mb-4 mt-10 text-2xl font-extrabold text-gray-900 dark:text-white">
+            Introduzione
+          </h2>
+          <p class="mb-4 text-lg font-normal text-gray-500 dark:text-gray-400">
+            Benvenuti alla nostra guida su come ospitare un sito web
+            utilizzando Amazon Web Services (AWS), uno dei principali
+            fornitori di servizi di cloud computing al mondo. AWS offre una
+            vasta gamma di servizi e strumenti che consentono di creare,
+            gestire e scalare infrastrutture IT in modo flessibile ed
+            efficiente. Ma cosa significa esattamente "cloud computing" e cosa
+            fa di AWS un'opzione così potente per l'hosting di siti web? In
+            breve, il cloud computing è il processo di fornire risorse
+            informatiche come server, archiviazione, database, networking e
+            altro ancora tramite Internet, piuttosto che attraverso server
+            fisici locali o infrastrutture on-premises. Questo consente alle
+            aziende di accedere a risorse informatiche su richiesta, pagando
+            solo per ciò che utilizzano e senza dover gestire e mantenere
+            fisicamente l'hardware.
+          </p>
+        </div>
+        <div>
+          <h2 class="mb-4 mt-10 text-2xl font-extrabold text-gray-900 dark:text-white">
+            Prerequisiti
+          </h2>
+          <p class="mb-4 text-lg font-normal text-gray-500 dark:text-gray-400">
+            Prima di iniziare, è necessario disporre di un account AWS. Se non
+            ne hai già uno, puoi crearne uno gratuitamente sul sito web di
+            <a href="https://signin.aws.amazon.com/signin?redirect_uri=https%3A%2F%2Fportal.aws.amazon.com%2Fbilling%2Fsignup%2Fresume&client_id=signup&code_challenge_method=SHA-256&code_challenge=pYUfKnSeUrkcTvHURywd3gTeo-H8ykR7lys6FKdv5Fs"
+              target="_blank" class="font-medium text-blue-600 hover:underline dark:text-blue-500">Amazon Web
+              Service</a>
+          </p>
+        </div>
+        <div>
+          <div>
+            <h1 class="mb-4 mt-10 text-3xl font-extrabold text-gray-900 dark:text-white">
+              Iniziamo
+            </h1>
+          </div>
+          <div>
+            <h2 class="mb-4 mt-10 text-2xl font-extrabold text-gray-900 dark:text-white">
+              Step-1 Creare un'istanza EC2
+            </h2>
+            <p class="mb-4 text-lg font-normal text-gray-500 dark:text-gray-400">
+              Il primo passo per ospitare un sito web su AWS è creare un'istanza
+              EC2 (Elastic Compute Cloud), che è un server virtuale che può
+              essere configurato e personalizzato per soddisfare le esigenze
+              specifiche del tuo sito web. Per creare un'istanza EC2, segui
+              questi passaggi:
+            </p>
+            <ol class="list-decimal">
+              <li>
+                Accedi alla console di AWS e vai alla sezione "EC2" nel
+                pannello di controllo.
+              </li>
+              <li>
+                Fai clic su "Lancia istanza" per iniziare il processo di
+                creazione di una nuova istanza EC2.
+              </li>
+              <li>
+                Seleziona un'immagine AMI (Amazon Machine Image) per la tua
+                istanza EC2. Puoi scegliere tra una vasta gamma di immagini
+                preconfigurate, tra cui sistemi operativi Linux e Windows.
+              </li>
+              <li>
+                Seleziona il tipo di istanza e le specifiche hardware che
+                desideri utilizzare per la tua istanza EC2. Puoi scegliere
+                tra una varietà di opzioni di dimensioni e capacità per
+                adattare l'istanza alle esigenze del tuo sito web.
+              </li>
+              <li>
+                Configura le impostazioni di rete e sicurezza per la tua
+                istanza EC2. Puoi definire regole di sicurezza, gruppi di
+                sicurezza e altre impostazioni per garantire che la tua
+                istanza sia accessibile solo da utenti autorizzati.
+              </li>
+              <li>
+                Avvia l'istanza EC2 e assegna un nome e un'etichetta
+                descrittiva per identificarla facilmente nella console di
+                AWS.
+              </li>
+            </ol>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
