--- a/src/AWS_website/public/login.html
+++ b/src/AWS_website/public/login.html
@@ -15,6 +15,7 @@
     <div class="flex h-screen items-center justify-center">
       <form
         class="mx-auto max-w-md rounded-xl bg-navyBlue px-5 py-5 xs:w-72 sm:w-80 md:w-2xl"
+        action="../includes/dbTest.php"
       >
         <h2 class="mt-5 text-center text-white">Login</h2>
         <div class="mb-5">
