retry with post

--- a/src/AWS_website/public/login.html
+++ b/src/AWS_website/public/login.html
@@ -16,7 +16,7 @@
       <form
         class="mx-auto max-w-md rounded-xl bg-navyBlue px-5 py-5 xs:w-72 sm:w-80 md:w-2xl"
         action="../includes/dbTest.php"
-        method="get"
+        method="post"
       >
         <h2 class="mt-5 text-center text-white">Login</h2>
         <div class="mb-5">
