Revert "fix comment"
This reverts commit 2a7154294132d8380e6e98a8669d5b6f7c4cafc3.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body onload="window.location = 'src/AWS_website/public/login.html'">
+    <!-- redirect alla main,html -->
     <!-- (preferisco mettere tutti i contenuti pubblici agli utenti nella cartella /public) -->
   </body>
 </html>
