--- a/src/public/login.html
+++ b/src/public/login.html
@@ -8,14 +8,14 @@
       href="../assets/img/main_logo_favicon.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="/src/AWS_website/style/style.css" />
+    <link rel="stylesheet" href="../style/style.css" />
     <title>Login</title>
   </head>
   <body class="h-screen w-screen bg-navyBlue-100">
     <div class="flex h-screen items-center justify-center">
       <form
         class="mx-auto max-w-md rounded-xl bg-navyBlue px-5 py-5 xs:w-72 sm:w-80 md:w-2xl"
-        action="../includes/dbTest.php"
+        action="../includes/checkLogin.php"
 	method="post"
       >
         <h2 class="mt-5 text-center text-white">Login</h2>
