--- a/src/public/main.html
+++ b/src/public/main.html
@@ -8,7 +8,7 @@
       href="../assets/img/main_logo_favicon.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="/src/AWS_website/style/style.css" />
+    <link rel="stylesheet" href="../style/style.css" />
     <title>Come creare un sever AWS</title>
   </head>
 
